--- a/index.html
+++ b/index.html
@@ -33,11 +33,11 @@
                         <input type="tel" id="input4" name="input4" placeholder="Email Address">
                     </div>
                     <div class="form-group">
-                        <label for="input6">City</label>
+                        <label for="input6">Password</label>
                         <input type="text" id="input6" name="input6" placeholder="Password">
                     </div>
                     <div class="form-group">
-                        <label for="input7">Country</label>
+                        <label for="input7">Confirm Password</label>
                         <input type="text" id="input7" name="input7" placeholder="Confirm Password">
                     </div>
                     <div class="form-group">
