--- a/index.html
+++ b/index.html
@@ -18,19 +18,19 @@
                     <p>Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the industry.</p>
                     <div class="form-group">
                         <label for="input1">VJ</label>
-                        <input type="text" id="input1" name="input1" placeholder="VJ ">
+                     <input type="text" id="input1" name="input1" placeholder="VJ ">
                     </div>
                     <div class="form-group">
                         <label for="input2">Radhot</label>
                         <input type="text" id="input2" name="input2" placeholder="Rathod">
                     </div>
                     <div class="form-group">
-                        <label for="input3">Mobile number</label>
-                        <input type="email" id="input3" name="input3" placeholder="Mobile Number">
+                        <label for="input3">Email Address</label>
+                        <input type="email" id="input3" name="input3" placeholder="Email Address">
                     </div>
                     <div class="form-group">
-                        <label for="input4">Email Address</label>
-                        <input type="tel" id="input4" name="input4" placeholder="Email Address">
+                        <label for="input4">Mobile Number</label>
+                        <input type="tel" id="input4" name="input4" placeholder="Mobile Number">
                     </div>
                     <div class="form-group">
                         <label for="input6">Password</label>
